# ai-pet

./: .file-cap-baseline  .gitignore  AGENT.md  CLAUDE.md  DONE.md  IDEA.md  README.md  STATUS.md  TODO.md  index.html  package.json  pnpm-lock.yaml
docs/: GOAL.md  TODO.md  configuration.md  macos-automation.md  telegram.md
docs/done/: 001-telegram-image-input.md  002-chatmini-screenshot-input.md  003-morning-briefing-mood-image.md  004-recurring-reminder-detect.md  005-url-fetch-summarize.md  006-intent-skill-profile.md  007-memory-follow-up.md  008-welcome-back-trigger.md  009-visual-memory-item.md  010-butler-task-subtask-propose.md  011-scheduled-report.md  012-deferred-task-queue.md  013-return-briefing.md  014-panel-reports.md  015-conversational-task-cancel.md  016-morning-briefing-tool-enrich.md  017-mood-task-interplay.md  018-memory-followup-task-propose.md  019-persona-style-self-tune.md  020-task-chain-dependency.md  021-mood-weekly-builtin-report.md  022-task-time-ambiguity-confirm.md  023-session-end-memory-distill.md  024-memory-forget-propose.md  025-memory-consolidate-propose.md  026-user-stress-detect.md  027-user-topic-arc.md  028-panel-mood-chart.md  029-pet-self-notes.md  030-reminder-snooze.md  031-local-file-input.md  032-anniversary-extract.md  033-reminder-context-inject.md  (+1078 more)
scripts/: check-chatmini-blocklist.sh  check-file-cap.sh
src/: App.tsx  DebugApp.tsx  PanelApp.tsx  main.tsx  text.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: butler_history.rs  common.rs  companionship.rs  config.rs  consolidate.rs  db.rs  db_tests.rs  decision_log.rs  detail_history.rs  feedback_history.rs  focus_mode.rs  focus_tracker.rs  input_idle.rs  lib.rs  local_file_input.rs  log_rotation.rs  memory_retrieval.rs  mood.rs  mood_history.rs  mute_count.rs  proactive.rs  redaction.rs  speech_history.rs  speech_history_tests.rs  task_heartbeat.rs  task_queue.rs  task_queue_tests.rs  time_ambiguity.rs  tool_call_history.rs  tool_review.rs  tool_review_policy.rs  tool_risk.rs  url_fetch.rs  visual_memory.rs  wake_detector.rs  weekly_summary.rs  window_state.rs
src-tauri/src/commands/: app.rs  chat.rs  chat_think_strip_tests.rs  chat_trim_tests.rs  debug.rs  gallery.rs  group.rs  heartbeat.rs  heartbeat_file.rs  image.rs  mcp.rs  memory.rs  memory_churn_tests.rs  memory_search_match_tests.rs  mod.rs  prompt.rs  screenshot.rs  session.rs  settings.rs  shell.rs  task.rs  task_tests.rs  telegram.rs  window.rs
src-tauri/src/mcp/: manager.rs  mod.rs
src-tauri/src/proactive/: active_app.rs  butler_schedule.rs  butler_schedule_tests.rs  clock.rs  cooldown.rs  daily_review.rs  gate.rs  gate_tests.rs  loop_runner.rs  manual_trigger.rs  morning_briefing.rs  os_notification.rs  prompt_assembler.rs  prompt_rules.rs  prompt_tests.rs  reminder_cluster.rs  reminder_context.rs  reminder_hints.rs  reminders.rs  session_helpers.rs  task_hints.rs  telemetry.rs  time_helpers.rs  tone_snapshot.rs  transient.rs  turn.rs  unread_tray.rs  welcome_back.rs
src-tauri/src/telegram/: bot.rs  bot_tests.rs  bulk_silent.rs  command_utils.rs  commands.rs  commands_tests.rs  due_preset.rs  mod.rs  photo.rs  warnings.rs
src-tauri/src/tools/: agent_tools.rs  calendar_tool.rs  chat_tool.rs  context.rs  file_tools.rs  give_image_tool.rs  group_tool.rs  memory_tools.rs  mod.rs  registry.rs  retrieve_memory_tool.rs  screenshot_tool.rs  shell_tools.rs  snooze_reminder_tool.rs  system_tools.rs  task_create_tool.rs  task_tool.rs  tool.rs  weather_tool.rs  web_search_tool.rs
(+96 files in other folders)
