[package]
name = "pet"
version = "0.1.0"
description = "Desktop AI Pet"
authors = ["moon"]
edition = "2021"

[lib]
name = "pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde_yaml = "0.9"
base64 = "0.22"
dirs = "6"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
rmcp = { version = "1.2", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "reqwest",
] }
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
regex = "1"
# bundled feature 编译时静态打包 SQLite C 源码，无外部依赖。
rusqlite = { version = "0.32", features = ["bundled"] }

